# config-xmonad

./: .gitignore  .nvimrc  .stylish-haskell.yaml  README.md  build  config-xmonad.cabal  default.nix  my-xmonad.cabal  restart  shell.nix  stack.yaml  xmobar.habito.hs  xmobar.hs  xmonad.hs
.github/workflows/: build.yml
nix/ghcide-nix/: default.nix
nix/nixpkgs/: source.json
nix/ormolu/: default.nix
nixpkgs/: default.nix  source.json
scripts/: get-volume.sh
src/: Colors.hs  Fonts.hs  Machines.hs  MyXmobar.hs  MyXmonad.hs
src/Language/Haskell/TH/Quote/: Text.hs
