cabal-version: 2.4

name: config-xmonad
version: 1.0.0
build-type: Simple

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:
    -Wall
    -fno-warn-missing-signatures
    -fno-warn-partial-type-signatures
  exposed-modules:
    MyXmonad
    MyXmobar
  other-modules:
    Colors
    Machines
    Fonts
  build-depends:
    X11,
    base,
    bytestring,
    containers,
    directory,
    hostname,
    template-haskell,
    text,
    xmobar,
    xmonad,
    xmonad-contrib,
    xmonad-extras,

executable my-xmonad
  main-is: xmonad.hs
  default-language: Haskell2010
  ghc-options: -threaded
  build-depends: base, config-xmonad

executable my-xmobar
  main-is: xmobar.hs
  default-language: Haskell2010
  ghc-options: -threaded
  build-depends: base, config-xmonad
