cabal-version: 2.4

name: my-xmonad
version: 0.1.0
build-type: Simple

executable my-xmonad
  main-is: xmonad.hs
  default-language:
    Haskell2010
  ghc-options:
    -threaded
    -Wall
    -fno-warn-missing-signatures
    -fno-warn-partial-type-signatures
  build-depends:
    base,
    xmonad,
    xmonad-contrib,
    xmonad-extras,
    X11,
    directory,
    bytestring,
    containers,
    text,
    template-haskell,
